# TaggerHack

./: .gitignore  Dockerfile  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml
.docker/nginx/: nginx.conf
configs/: .env.example  Environment.py  Minio.py
errors/: errors.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.scss
migrations/versions/: cea47de602a0_init.py
ml/: constants.py  lifespan.py
ml/HMC/: data_loader.py  loss.py  metrics.py  model.py  utils.py
ml/imagebind/: __init__.py  data.py
ml/imagebind/models/: imagebind_model.py  multimodal_preprocessors.py
ml/manual_torchvision/: main.py
ml/models/: label_encoders.pth
ml/pipilines/: inference.py  train.py
ml/summarizer/: main.py
models/: video.py
repositories/: video.py
routing/v1/: video.py
schemas/: video.py
services/: importer.py  ml.py  rutube.py  video.py
utils/: httpx_client.py
